2005-10-18  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/functions.c (__execute_function) 
	(__run_complex_function_items, execute_complex_function): 
	fix for moving/resizing reference window usage with complex functions.

2005-10-16  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/move_resize.c (__move_loop): 
	reimplemented a fix for the place with keyboard setting a button as 
	used for place bug; this time without breaking escape key.

2005-10-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (__move_loop):
	removed the previous patch as it breaks aborting window motion with the
	escape key.

2005-10-03  Viktor Griph  <griph@dd.chalmers.se>

	* fvwm/move_resize.c (__move_loop):
	fixed bug where finishing movment with keyboard would set a random
	button as used for placement.

2005-09-30  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS
	* fvwm/frame.c (frame_setup_border):
	reverted change for move of window parts (reset of PressedW).

2005-09-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_setup_border):
	fixed a Warning

2005-09-29  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* fvwm/move_resize.c (__resize_window):
	removed duplicate pointer query for enter/leave notify events.
	resizing of shaded windows in the shaded direction no longer
	results in bogus ref points.

	* fvwm/frame.c (frame_setup_border):
	reset PressedW if the part has moved. This prevents strange
	ref points in resize if called from some complex functions.

	* fvwm/frame.c (frame_create_move_resize_args):
	shaded windows use get_client_geometry for client geometry.

2005-09-25  Viktor Griph  <griph@dd.chalmers.se>

	* NEWS:
	* AUTHORS:
	* fvwm/fvwm.h (window_flags, WindowConditionMask, FvwmWindow):
	* fvwm/window_flags.h (IS_PLACED_BY_WB3, SET_PLACED_WB3)
	(SETM_PLACED_WB3):
	* fvwm/session.c (_match, SaveWindowStates, LoadWindowStates):
	* fvwm/conditional.c (MatchesConditionMask, CreateConditionMask):
	* fvwm/add_window.c (setup_window_structure):